--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,14 @@ inputs:
     description: 'Github token'
     default: ${{ github.token }}
     required: false
+  in-review-label:
+    description: 'In review label title and color'
+    default: '{"name": "In-Review", "color": "#c2e0c6"}'
+    required: false
+  done-label:
+    descrition: 'Done label title and color'
+    default: '{"name": "Resolved (test it), "color": "#0e8a16"}'
+    required: false
 runs:
   using: 'node12'
   main: 'dist/index.js'
