use configuration from action file

--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ inputs:
     required: false
   done-label:
     descrition: 'Done label title and color'
-    default: '{"name": "Resolved (test it), "color": "#0e8a16"}'
+    default: '{"name": "Resolved (test it)", "color": "#0e8a16"}'
     required: false
 runs:
   using: 'node12'
